Add local dev auth for web
